--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 absl-py==0.8.1
 alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.7
+anaconda-project==0.8.3
 appnope==0.1.0
 appscript==1.0.1
 asn1crypto==1.0.1
@@ -27,6 +30,7 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 cloudpickle==1.2.2
+clyent==1.2.2
 colorama==0.4.1
 conda==4.8.1
 conda-build==3.18.9
